--- a/src/app/components/user/user-add/user-add.component.html
+++ b/src/app/components/user/user-add/user-add.component.html
@@ -1,1 +1,54 @@
-<p>user-add works!</p>
+<div class="container-fluid" style="height:100vh;">
+
+    <div class="row p-3">
+        <div class="col-xl-12 p-3">
+            <div class="card w-50 mx-auto">
+                <div class="card-header">
+                    Registration
+                </div>
+                <form [formGroup]="userForm">
+                <div class="card-body ">
+                    
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">First Name</label>
+                                <input type="text" class="form-control" formControlName="firstName">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">LastName</label>
+                                <input type="text" class="form-control" formControlName="lastName">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl-6">
+                                <label for="" class="form-label">Email</label>
+                            <input type="email" class="form-control" formControlName="email">
+                            </div>
+                            <div class="col-xl-6">
+                                <label for="gender" class="form-label">Gender</label>
+                                <div class="form-check">
+                                    <input type="radio" id="male" name="gender" value="male" class="form-check-input" formControlName="gender">
+                                    <label for="male" class="form-check-label">Male</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="radio" id="female" name="gender" value="female" class="form-check-input" formControlName="gender">
+                                    <label for="female" class="form-check-label">Female</label>
+                                </div>
+                                <div class="form-check">
+                                    <input type="radio" id="other" name="gender" value="other" class="form-check-input" formControlName="gender">
+                                    <label for="other" class="form-check-label">Other</label>
+                                </div>
+                            </div>
+                            
+                        </div>
+                  
+                </div>
+            </form>
+                <div class="card-footer">
+                    <div class="button btn btn-success float-end" (click)="submit()">Success</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
