--- a/src/app/components/user/user-edit/user-edit.component.html
+++ b/src/app/components/user/user-edit/user-edit.component.html
@@ -27,15 +27,15 @@
                             <div class="col-xl-6">
                                 <label for="gender" class="form-label">Gender</label>
                                 <div class="form-check">
-                                    <input type="radio" id="male" name="gender" value="Male" class="form-check-input" formControlName="gender">
+                                    <input type="radio" id="Male" name="gender" value="Male" class="form-check-input" formControlName="gender">
                                     <label for="male" class="form-check-label">Male</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" id="female" name="gender" value="Female" class="form-check-input" formControlName="gender">
+                                    <input type="radio" id="Famale" name="gender" value="Female" class="form-check-input" formControlName="gender">
                                     <label for="female" class="form-check-label">Female</label>
                                 </div>
                                 <div class="form-check">
-                                    <input type="radio" id="other" name="gender" value="other" class="form-check-input" formControlName="gender">
+                                    <input type="radio" id="Other" name="gender" value="Other" class="form-check-input" formControlName="gender">
                                     <label for="other" class="form-check-label">Other</label>
                                 </div>
                             </div>
